Update css style

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ body {
     background-image: url('http://subtlepatterns.com/patterns/tree_bark.png');
 }
 
-.row {
+.topUp {
     margin-top: 30px;
 }
 
