--- a/css/main.css
+++ b/css/main.css
@@ -2,8 +2,8 @@ body {
     background-image: url('http://subtlepatterns.com/patterns/tree_bark.png');
 }
 
-.topUp {
-    margin-top: 30px;
+.row {
+    margin-top: 15px;
 }
 
 .container {
